# Reinfocement_Learning

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  WORKPLAN.md  docker-compose.yml  rl_instructions.md
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
backend/algorithms/: __init__.py  base_algorithm.py  q_learning.py
backend/environments/: environment_manager.py
backend/training/: trainer.py
dev/: ARCHITECTURE.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION_LINUX.md  INSTALLATION_MACOS.md  INSTALLATION_WINDOWS.md
examples/: README.md  pyproject.toml
examples/notebooks/: frozenlake_q_learning.ipynb  q_learning_frozenlake.ipynb
examples/notebooks/solutions/: solution_frozenlake_q_learning.ipynb  solution_q_learning_frozenlake.ipynb
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.css  App.js  App.test.js  api.js
frontend/src/components/: ControlButtons.css  ControlButtons.jsx  EnvironmentViewer.css  EnvironmentViewer.jsx  LearningVisualization.css  LearningVisualization.jsx  ParameterPanel.css  ParameterPanel.jsx  RewardChart.css  RewardChart.jsx
frontend/src/components/__tests__/: EnvironmentViewer.test.js  ParameterPanel.test.js
frontend/src/content/: algorithms.json
tutorials/: docker-workflow.md
